<resources>
    <string name="app_name">LocationSmsApp</string>
    <string name="accessibility_service_description">This service detects double presses of the volume keys to perform actions.
        It does not read your screen content or collect personal data.</string>
    <string name="contact_name_number_placeholder">Name: Number</string>
    <string name="delete_button_text">Delete</string>
    <string name="custom_message_label">Message</string>
    <string name="custom_message_hint">e.g., I\'m sharing my location</string>
    <string name="save_message_button">Save Message</string>
    <string name="add_new_contact_label">Add New Contact</string>
    <string name="contact_name_hint">Name</string>
    <string name="contact_number_hint">Phone Number</string>
    <string name="add_contact_button">Add Contact</string>
    <string name="saved_contacts_label">Saved Contacts</string>
    <string name="send_alert_button">Send Alert</string>
    <string name="manage_contacts_button">Manage Contacts and Message</string>
    <string name="enable_volume_service_button">Enable Accessibility Service</string>
    <string name="service_status_unknown">Accessibility Service Status: UNKNOWN</string>
    <string name="title_activity_settings">Settings</string>
    <string name="delete_contact_content_description">Delete Contact</string>
    <string name="recurring_sms_inactive">Recurring SMS: Inactive</string>
    <string name="stop_recurring_sms">Stop Recurring SMS</string>
</resources>